# rwa-solana

./: .env  .gitignore  CONTEXTO.md  Makefile  ROADMAP_FEATURES.md  brandkit.html  docker-compose.prod.yml  docker-compose.yml  explain.md
.claude/: context.md
credential-id/: Makefile  package-lock.json  tsconfig.json
credential-id/programs/credential_program/: Cargo.toml
credential-id/programs/credential_program/src/error/: mod.rs
credential-id/programs/credential_program/src/instructions/: initialize_network.rs  revoke_credential.rs
credential-id/programs/credential_program/src/state/: credential.rs
diagram-contexts/: 01-system-architecture.md  02-detailed-architecture.md  03-data-flow-sequence.md  04-tokenization-flow.md  05-investment-sequence.md  06-dividends-flow.md  07-kyc-verification-sequence.md  08-transfer-hook-sequence.md  09-credential-program-structure.md  10-api-overview.md  11-auth-sequence.md  12-indexer-architecture.md
docker/: .env  .env.example  README.md  docker-compose.yml
docs/: README.md
hub-credential-protocol/: .env.docker  .gitignore  Anchor.toml  docker-compose.yml  package.json
posts/: 00-LANCAMENTO-apresentacao-projeto.md  00-instrucoes-gemini.md  01-visao-democratizacao-imobiliaria.md  02-arquitetura-sistema-completo.md  03-por-que-solana.md  04-transfer-hook-compliance.md  05-clean-architecture-backend.md  06-hub-credential-protocol.md  07-sistema-dividendos.md  08-escrow-milestones.md  09-indexador-go.md  10-seguranca-audit-trail.md  11-desafios-aprendizados.md  12-futuro-rwa-brasil.md
real_estate_program/: .gitignore  (+1 more)
(+203 files in other folders)
