[package]
name = "credential_program"
version = "0.1.0"
description = "Hub Credential Protocol - On-chain KYC/Verifiable Credentials for Real Estate Tokenization"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "credential_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
